# pywriter

./: .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pylint.yml  super-linter.yml
Previous Versions/: pywriter_0.0.1.py
docs/: CONTRIBUTING.md
pywriter/: __init__.py  __main__.py
